// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test in GifGrid Show GifGrid component correctly 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
    The Office
  </h3>
  <p
    className="animate__animated animate__flash"
  >
    Loading...
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;

exports[`Test in GifGrid Show items when loading images in useFetchGifs 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
    The Office
  </h3>
  <div
    className="card-grid"
  >
    <GifGridItem
      id="abc"
      key="abc"
      title="Gif Title"
      ulr="https://google.com"
    />
  </div>
</Fragment>
`;
